--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -16,6 +16,8 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    permissions:
+     checks: write
 
     steps:
     - uses: actions/checkout@v4
@@ -36,4 +38,11 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest
+        python -m pytest --verbose --junit-xml=junit.xml
+    - name: publish test report
+      uses: mikepenz/action-junit-report@v3
+      if: success() || failure()
+      with:
+        report_paths: '**/junit.xml'
+        detailed_summary: true
+        include_passed: true
